[package]
name = "packet-interceptor-v1"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
aya = { git = "https://github.com/aya-rs/aya", features = ["async_tokio"] }
aya-log = { git = "https://github.com/aya-rs/aya" }
clap = { version = "4.1", features = ["derive"] }
packet-interceptor-v1-common = { path = "../packet-interceptor-v1-common", features = ["user"] }
anyhow = "1"
env_logger = "0.10"
libc = "0.2"
log = "0.4"
tokio = { version = "1.25", features = ["macros", "rt", "rt-multi-thread", "net", "signal"] }
procfs = "0.16.0"
bytes = "1.6.0"

[[bin]]
name = "packet-interceptor-v1"
path = "src/main.rs"
