[package]
name = "tc-test"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
aya = { git = "https://github.com/aya-rs/aya", features = ["async_tokio"] }
aya-log = { git = "https://github.com/aya-rs/aya" }
tc-test-common = { path = "../tc-test-common", features = ["user"] }
clap = { version = "4.1", features = ["derive"] }
anyhow = "1"
env_logger = "0.10"
bytes = "1"
libc = "0.2"
log = "0.4"
tokio = { version = "1.25", features = ["macros", "rt", "rt-multi-thread", "net", "signal"] }

[[bin]]
name = "tc-test"
path = "src/main.rs"
